--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:description" content="High-trust data architecture and backend systems for operators who need correctness, speed, and control.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://srslogics.com">
-  <meta property="og:image" content="https://srslogics.com/og-image.png">
+  <meta property="og:image" content="https://srslogics.com/assets/images/og-image.png">
   <meta property="og:site_name" content="SrS Logics">
 
   <!-- Twitter -->
