--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <div class="bridge-container">
 
     <div class="bridge-left">
-      <span class="bridge-label">Flagship Product</span>
+      <span class="bridge-label">Flagship Product · Live Platform</span>
       <h2>DataSentinel</h2>
       <p class="bridge-description">
         DataSentinel is our production-grade data quality enforcement layer —
@@ -109,10 +109,14 @@
         broken systems in high-stakes environments.
       </p>
 
-      <a href="/datasentinel" class="btn-primary solid">
+      <a
+        href="https://datasentinel-em6r.onrender.com"
+        class="btn-primary solid"
+        target="_blank"
+        rel="noopener"
+      >
         Explore DataSentinel →
       </a>
-      
     </div>
 
     <div class="bridge-right">
@@ -136,6 +140,7 @@
 
   </div>
 </section>
+
 
 <!-- ================= CASE STUDY ================= -->
 <section id="case-study" class="case-outcome">
