--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </p>
 
       <a
-        href="https://datasentinel-em6r.onrender.com"
+        href="https://datasentinel.srslogics.com/"
         class="btn-primary solid"
         target="_blank"
         rel="noopener"
