--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 <header>
   <div class="logo">SrS Logics</div>
   <nav>
+    <a href="/index.html">Home</a>
+
+    <a href="/datasentinel.html">DataSentinel</a>
+
     <a
       href="https://calendly.com/shubhamsinghvr/strategy-call"
       target="_blank"
