--- a/index.html
+++ b/index.html
@@ -48,9 +48,18 @@
 
 <!-- ================= HERO ================= -->
 <main id="hero">
-  <h1>Data Systems That Don’t Break at Scale</h1>
+  <h1>
+    Data Systems That Don’t Break<br>
+    <span class="accent">at Scale</span>
+  </h1>
+
   <p class="lead">
-    We design and rebuild data pipelines, APIs, and analytics foundations for operators who need speed, accuracy, and control.
+    Validate, normalize, and monitor data pipelines with
+    production-grade reliability.
+  </p>
+  
+  <p class="subtle hero-proof">
+    Running live on AWS ECS Fargate using event-driven architecture.
   </p>
 
   <a
@@ -59,47 +68,110 @@
     target="_blank"
     rel="noopener"
   >
-    BOOK A STRATEGY CALL
+    Book a Strategy Call
   </a>
 </main>
 
 <!-- ================= PROBLEM ================= -->
 <section id="problem" class="problem-section">
-  <div class="section-title">The Problem</div>
 
-  <div class="grid">
-    <div class="card"><strong>Reports don’t match reality</strong></div>
-    <div class="card"><strong>Pipelines fail silently</strong></div>
-    <div class="card"><strong>Manual fixes never end</strong></div>
-    <div class="card"><strong>Decisions lag behind data</strong></div>
+  <div class="container">
+
+    <span class="section-label">THE PROBLEM</span>
+
+    <h2 class="problem-heading">
+      Data Systems Break Quietly
+    </h2>
+
+    <p class="problem-intro">
+      Modern teams rely on data, but pipelines fail silently,
+      reports drift from reality, and manual fixes consume time
+      that should be spent making decisions.
+    </p>
+
+    <div class="problem-surface">
+      <div class="grid">
+
+        <div class="card">
+          <strong>Reports don’t match reality</strong>
+        </div>
+
+        <div class="card">
+          <strong>Pipelines fail silently</strong>
+        </div>
+
+        <div class="card">
+          <strong>Manual fixes never end</strong>
+        </div>
+
+        <div class="card">
+          <strong>Decisions lag behind data</strong>
+        </div>
+
+      </div>
+    </div>
+
   </div>
+
 </section>
 
 <!-- ================= SERVICES ================= -->
 <section id="services" class="services-section">
-  <div class="section-title">What We Deliver</div>
 
-  <div class="grid">
-    <div class="card">
-      <h3>Data Architecture</h3>
-      <p>High-throughput batch and streaming systems built for correctness and observability.</p>
+  <div class="container">
+
+    <span class="section-label">WHAT WE DELIVER</span>
+
+    <h2 class="services-heading">
+      Systems Designed for Reliability at Scale
+    </h2>
+
+    <p class="services-intro">
+      SrS Logics builds data platforms that remain correct,
+      observable, and scalable as businesses grow.
+    </p>
+
+    <div class="services-surface">
+      <div class="grid">
+
+        <div class="card">
+          <h3>Data Architecture</h3>
+          <p>
+            High-throughput batch and streaming systems built for correctness
+            and observability — ensuring decisions rely on trusted data.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Backend & APIs</h3>
+          <p>
+            FastAPI-based services with strict validation and performance
+            guarantees that scale with production workloads.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Analytics Foundations</h3>
+          <p>
+            Clean, modeled datasets leadership can trust as a single source
+            of truth across teams.
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Technical Strategy</h3>
+          <p>
+            Architecture reviews and scaling roadmaps that prevent expensive
+            rebuilds and future bottlenecks.
+          </p>
+        </div>
+
+      </div>
     </div>
 
-    <div class="card">
-      <h3>Backend & APIs</h3>
-      <p>FastAPI-based services with strict validation and performance guarantees.</p>
-    </div>
-
-    <div class="card">
-      <h3>Analytics Foundations</h3>
-      <p>Clean, modeled datasets leadership can trust as a single source of truth.</p>
-    </div>
-
-    <div class="card">
-      <h3>Technical Strategy</h3>
-      <p>Architecture reviews and scaling roadmaps that prevent expensive rebuilds.</p>
-    </div>
   </div>
+
+</section>
 <!-- ================= Product Bridge ================= -->
 <section class="bridge">
   <div class="bridge-container">
@@ -114,7 +186,7 @@
       </p>
 
       <a
-        href="https://datasentinel.srslogics.com/"
+        href="/datasentinel.html"
         class="btn-primary solid"
         target="_blank"
         rel="noopener"
@@ -148,70 +220,134 @@
 
 <!-- ================= CASE STUDY ================= -->
 <section id="case-study" class="case-outcome">
-  <div class="section-title">Case Outcome</div>
 
-  <div class="grid">
-    <div class="card">
-      <h3>Operational & Financial Data System — National Broiler Farm</h3>
+  <div class="container">
 
-      <p>
-        Designed and stabilized daily operational and financial data pipelines for a poultry
-        business handling continuously updated production and finance data.
-      </p>
+    <span class="section-label">CASE OUTCOME</span>
 
-      <p>
-        Replaced fragmented spreadsheets and nightly manual corrections with validated,
-        reconciled, automated daily rollups.
-      </p>
+    <h2 class="case-heading">
+      Operational & Financial Data System — National Broiler Livestock
+    </h2>
 
-      <p>
-        Delivered a reliable daily single source of truth across operations and finance.
-      </p>
+    <div class="case-surface">
 
-      <p>
-        Result: feed conversion ratio improved by <strong>24%</strong>, litter quality by
-        <strong>45%</strong>, and profit-to-revenue increased through tighter operational control.
-      </p>
+      <div class="case-grid">
+
+        <!-- LEFT: STORY -->
+        <div class="case-details">
+
+          <p>
+            Designed and stabilized daily operational and financial data pipelines
+            for a poultry business handling continuously updated production
+            and finance data.
+          </p>
+
+          <p>
+            Replaced fragmented spreadsheets and nightly manual corrections
+            with validated, reconciled, automated daily rollups.
+          </p>
+
+          <p>
+            Delivered a reliable daily single source of truth across operations
+            and finance.
+          </p>
+
+        </div>
+
+        <!-- RIGHT: RESULTS -->
+        <div class="case-results">
+
+          <div class="metric">
+            <span>24%</span>
+            <p>Feed conversion improvement</p>
+          </div>
+
+          <div class="metric">
+            <span>45%</span>
+            <p>Litter quality increase</p>
+          </div>
+
+          <div class="metric">
+            <span>↑ Profit</span>
+            <p>Operational efficiency gains</p>
+          </div>
+
+        </div>
+
+      </div>
+
     </div>
+
   </div>
+
 </section>
 
 <!-- ================= PROCESS ================= -->
 <section id="process" class="process-section">
-  <div class="section-title">How We Work</div>
 
-  <div class="grid">
-    <div class="card">
-      <h3>Diagnose</h3>
-      <p>Identify structural failure points across pipelines, APIs, and data models.</p>
+  <div class="container">
+
+    <span class="section-label">HOW WE WORK</span>
+
+    <h2 class="process-heading">
+      A Structured Approach to Reliable Systems
+    </h2>
+
+    <div class="process-flow">
+
+      <div class="process-step">
+        <div class="step-number">01</div>
+        <h3>Diagnose</h3>
+        <p>
+          Identify structural failure points across pipelines,
+          APIs, and data models.
+        </p>
+      </div>
+
+      <div class="process-step">
+        <div class="step-number">02</div>
+        <h3>Design</h3>
+        <p>
+          Define architectures that scale without accumulating
+          hidden technical debt.
+        </p>
+      </div>
+
+      <div class="process-step">
+        <div class="step-number">03</div>
+        <h3>Execute</h3>
+        <p>
+          Build, fix, or guide execution with zero fluff
+          and full accountability.
+        </p>
+      </div>
+
     </div>
 
-    <div class="card">
-      <h3>Design</h3>
-      <p>Define architectures that scale without accumulating hidden technical debt.</p>
-    </div>
-
-    <div class="card">
-      <h3>Execute</h3>
-      <p>Build, fix, or guide execution with zero fluff and full accountability.</p>
-    </div>
   </div>
+
 </section>
 
 <!-- ================= LEADERSHIP ================= -->
 <section id="leadership" class="leadership-section center">
-  <div class="section-title">Leadership</div>
 
-  <h2 class="section-subtitle">Founder & System Architect</h2>
-  <p><strong>Shubham Singh</strong><br/>MSc Data Science — University of Nottingham</p>
+  <span class="section-label">LEADERSHIP</span>
+
+  <h2 class="leader-name">Shubham Singh</h2>
+
+  <p class="leader-role">
+    Founder & System Architect<br>
+    <span>MSc Data Science — University of Nottingham</span>
+  </p>
 
   <hr class="soft-divider">
 
   <p class="leadership-vision">
-    SrS Logics exists to eliminate fragile data foundations and replace them with systems
-    that remain correct under pressure — scaling in volume, complexity, and decision impact
-    without hidden failure modes.
+    SrS Logics builds data systems that remain reliable under real operational pressure —
+    replacing fragile pipelines and manual fixes with architectures designed for correctness,
+    scalability, and long-term trust.
   </p>
+
 </section>
 
 <!-- ================= FINAL CTA ================= -->
