--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
 
     <div class="bridge-left">
       <span class="bridge-label">Flagship Product · Live Platform</span>
-      <h2>DataSentinel</h2>
+      <h2 class="product-name">
+        <span class="data">Data</span><span class="sentinel">Sentinel</span>
+      </h2>
       <p class="bridge-description">
         DataSentinel is our production-grade data quality enforcement layer —
         built directly from real failure modes we’ve seen while rebuilding
