--- a/datasentinel.html
+++ b/datasentinel.html
@@ -216,28 +216,33 @@
   </section>
 
 <!-- ================= ENDPOINTS ================= -->
-<section class="section">
-  <div class="container">
-    <h2>Live Production Endpoints</h2>
-
-    <ul>
-      <li>
-        Dashboard:
-        <a href="ttps://datasentinel.srslogics.com/login">/datasentinel/login</a>
-      </li>
-
-      <li>
-        API Docs:
-        <a href="https://datasentinel.srslogics.com/docs">/datasentinel/docs</a>
-      </li>
-
-      <li>
-        Health Check:
-        <a href="ttps://datasentinel.srslogics.com/health">/datasentinel/health</a>
-      </li>
-    </ul>
-  </div>
-</section>
+<section class="endpoints">
+    <div class="container">
+  
+      <span class="section-label">Production Access</span>
+      <h2>Live Production Endpoints</h2>
+  
+      <div class="endpoint-list">
+  
+        <a href="https://datasentinel.srslogics.com/login" target="_blank" class="endpoint">
+          <span class="endpoint-name">Dashboard</span>
+          <span class="endpoint-url">/datasentinel/login</span>
+        </a>
+  
+        <a href="https://datasentinel.srslogics.com/docs" target="_blank" class="endpoint">
+          <span class="endpoint-name">API Documentation</span>
+          <span class="endpoint-url">/datasentinel/docs</span>
+        </a>
+  
+        <a href="https://datasentinel.srslogics.com/health" target="_blank" class="endpoint">
+          <span class="endpoint-name">Health Check</span>
+          <span class="endpoint-url">/datasentinel/health</span>
+        </a>
+  
+      </div>
+  
+    </div>
+  </section>
 
 <!-- ================= FOOTER ================= -->
 <footer class="footer">
