--- a/index.html
+++ b/index.html
@@ -71,7 +71,24 @@
     Book a Strategy Call
   </a>
 </main>
+ <!-- ================= TRUST STRIP ================= -->
+<section class="trust-strip">
+  <div class="trust-container">
 
+    <p class="trust-label">
+      Built using production-grade architecture
+    </p>
+
+    <div class="trust-items">
+      <span>FastAPI</span>
+      <span>AWS ECS Fargate</span>
+      <span>Event-Driven Pipelines</span>
+      <span>PostgreSQL</span>
+      <span>Cloud-Native Design</span>
+    </div>
+
+  </div>
+</section>
 <!-- ================= PROBLEM ================= -->
 <section id="problem" class="problem-section">
 
