--- a/datasentinel.html
+++ b/datasentinel.html
@@ -245,11 +245,55 @@
   </section>
 
 <!-- ================= FOOTER ================= -->
+<!-- ================= FOOTER ================= -->
 <footer class="footer">
-  <div class="container">
-    <p>© 2026 SrS Logics — Data Systems That Don’t Break at Scale</p>
-  </div>
-</footer>
+    <div class="footer-container">
+  
+      <!-- BRAND -->
+      <div class="footer-col brand">
+        <h3>SrS Logics</h3>
+        <p>Data Systems That Don’t Break at Scale.</p>
+      </div>
+  
+      <!-- SERVICES -->
+      <div class="footer-col">
+        <h4>Services</h4>
+        <a href="#services">Data Architecture</a>
+        <a href="#services">Data Pipelines</a>
+        <a href="#process">Technical Strategy</a>
+      </div>
+  
+      <!-- PRODUCT -->
+      <div class="footer-col">
+        <h4>Product</h4>
+        <a href="/datasentinel.html">DataSentinel</a>
+        <a href="https://datasentinel.srslogics.com/docs" target="_blank">
+          API Docs
+        </a>
+      </div>
+  
+      <!-- CONTACT -->
+      <div class="footer-col">
+        <h4>Contact</h4>
+  
+        <a href="mailto:shubhamsingh@srslogics.com">
+          shubhamsingh@srslogics.com
+        </a>
+  
+        <a href="tel:+919270925106">
+          +91 9270925106
+        </a>
+  
+        <span class="location">Nagpur, India · Remote Worldwide</span>
+      </div>
+  
+    </div>
+  
+    <div class="footer-bottom">
+      © 2026 SrS Logics — Built with production-grade architecture.
+    </div>
+  
+  </footer>
 
 </body>
 </html>
